--- a/src/App.scss
+++ b/src/App.scss
@@ -2,16 +2,18 @@
   text-align: center;
 }
 
-.App-logo {
+.qr-code {
   height: 40vmin;
-  pointer-events: none;
 }
+
+/** 
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
+ **/
 
 .App-header {
   background-color: #282c34;
@@ -28,7 +30,7 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+/** @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
@@ -36,3 +38,4 @@
     transform: rotate(360deg);
   }
 }
+**/
